<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="1" 
    android:padding="15dp">
        
 	<TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:layout_alignParentTop="true"
        android:text="@string/registerTitle"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:layout_marginBottom="30dp"
     />
    
    <EditText            
     android:id="@+id/nameText"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_below="@+id/titleTextView"
     android:hint="@string/usernameRegHint" 
     android:layout_marginBottom="10dp"
 	/>
    
    <EditText            
     android:id="@+id/passwordText"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_below="@+id/nameText"
     android:hint="@string/passwordRegHint" 
     android:inputType="textPassword"
     android:layout_marginBottom="10dp"        
    />
    
    <EditText            
     android:id="@+id/passwordConfirmText"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_below="@+id/passwordText"
     android:hint="@string/passwordConfirmHint" 
     android:inputType="textPassword"
     android:layout_marginBottom="10dp"        
    />
    
    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
       
        android:text="@string/registerString"
     />

    
    
</RelativeLayout>

